# webthesis

./: .gitignore  Cargo.toml  ESSAY.md  Makefile  NOTES.md  README.md  latex_test.tex  package.json
parser/: Cargo.toml  Makefile  README.md  latex_test.tex
parser/src/: foliage.rs  latex-grammar.pest  main.rs  parsers.rs
parser/src/foliage/: commands.rs  environments.rs  tokens.rs
parser/src/parsers/: figures.rs  listings.rs  text.rs  toc.rs
parser/test_inputs/: additional.tex  basic.tex  include.tex  other-additional.tex
src/: app.html  latex-grammar.pest  main.rs
src/corpus/: numero_mysterioso.asm
src/routes/: +page.svelte  data.json
src/routes/components/: Affiliation.svelte  Author.svelte  Code.svelte  Footnote.svelte  Include.svelte  Label.svelte  Listing.svelte  Quote.svelte
src/utils/: find.ts  types.ts
web/: README.md  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
web/src/: app.css  app.d.ts  app.html  stores.ts  types.d.ts
web/src/components/: Heading.svelte  Node.svelte  Section.svelte  TableOfContents.svelte
web/src/corpus/: test.py
web/src/data/: beauty.json  bib.json  conclusion.json  front.json  full.json  ideals.json  introduction.json  listings.json  programming.json  raw.bib  text.json  toc.json  understanding.json
web/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte  +page.ts  beauty.json  bib.json  data.json  front.json  ideals.json  introduction.json  parsed.json  programming.json  text.json  toc.json
web/static/: Depaz_AestheticsUnderstandingSourceCode.bib
(+124 files in other folders)
