[package]
name = "latex_parser"
version = "0.1.0"
authors = ["pierre <pierre.depaz@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.23"
clap = { version="4.1.4", features = ["derive"]}
dyn-clone = "1.0.11"
pest = "2.0"
pest_derive = "2.0"
serde = { version= "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
